--- a/app/src/components/LoginPage/LoginPage.css
+++ b/app/src/components/LoginPage/LoginPage.css
@@ -1,6 +1,17 @@
 /* src/components/LoginPage/LoginPage.css */
-
+.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+  background: #f5f5f5;
+}
 .navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -8,34 +19,61 @@
   background-color: #282c34;
   color: white;
 }
-.login-page {
+
+
+.login-container {
+  background-color: white;
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  height: 100vh;
-  background: #f5f5f5;
+  max-width: 400px;
+  width: 100%;
+}
+
+.Head {
+  margin-bottom: 30px;
+  color: #060606;
+}
+
+.Prompt {
+  margin-bottom: 10px;
+  color: #060606;
+  font: 200;
 }
 
 .login-form {
   display: flex;
   flex-direction: column;
-  max-width: 300px;
-  margin: auto;
-  padding: 20px;
 }
 
-.login-form label {
-  margin-bottom: 5px;
-}
-
-.login-form input {
-  margin-bottom: 10px;
-  padding: 8px;
+.inputField {
+  padding: 15px;
+  margin-bottom: 20px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 5px;
+  font-size: 20px;
+  width: 100%;
+  height: 13px;
+}
+
+.login-form button {
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-form button:hover {
+  background-color: #0056b3;
 }
 
 .signup-section {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 .signup-section button {
@@ -46,6 +84,7 @@
   border-radius: 4px;
   cursor: pointer;
 }
+
 .logo a {
   color: #ffffff;
   text-decoration: none;
